[tool.poetry]
name = "fastapi-hello"
version = "0.1.0"
description = ""
authors = ["Zeyang Lin <4020306+linzeyang@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/linzeyang/fastapi-hello"
keywords = ["fastapi", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.3"
httpx = "^0.25"
pytest = "^7.4"
memray = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.coverage.run]
branch = true
source = [ "./" ]

[tool.coverage.report]
omit = [ "test_*.py", "conftest.py" ]

[tool.isort]
py_version=310
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [ "./" ]
python_files = [ "test_*.py" ]
console_output_style = "count"

[tool.ruff]
line-length = 88
target-version = "py310"
