[project]
name = "fastapi-hello"
version = "0.1.0"
description = "A simple FastAPI application example"
authors = [
    { name = "Zeyang Lin", email = "4020306+linzeyang@users.noreply.github.com" },
]
dependencies = [
    "fastapi==0.120.0",
    "pydantic[email]==2.12.3",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.38.0",
]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { text = "MIT" }
keywords = ["fastapi", "web", "api", "asyncio", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.11,<8",
    "httpx>=0.28,<1",
    "memray>=1.19,<2",
    "pytest>=8.4,<9",
]

[project.urls]
Repository = "https://github.com/linzeyang/fastapi-hello"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.coverage.run]
branch = true
source = ["./"]

[tool.coverage.report]
omit = ["test_*.py", "conftest.py"]

[tool.isort]
py_version = 310
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["./"]
python_files = ["test_*.py"]
console_output_style = "count"

[tool.ruff]
line-length = 88
target-version = "py310"
output-format = "full"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "Q", "S", "W"]
ignore = ["B008", "S101", "S105"]

[tool.pdm]
distribution = false
